[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interactables/Engine.gd" type="Script" id=1]
[ext_resource path="res://prefabs/Interactables/Interactable.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/Interactables/engine_mesh_instance.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/engine_startup.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/engine_loop.wav" type="AudioStream" id=5]

[node name="Engine" type="Spatial"]
script = ExtResource( 1 )

[node name="engine" parent="." instance=ExtResource( 3 )]

[node name="Interactable" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.0800256, 0, 0, 0, 0.16964, 0, 0, 0, 0.16964, -0.59349, -0.0320932, 0.00530243 )
prompt = "Toggle"

[node name="StartupSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 5.0

[node name="GasConsumptionTick" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="RunningSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_size = 5.0
max_db = 6.0
max_distance = 200.0
emission_angle_filter_attenuation_db = -25.0
[connection signal="emit_looking_at" from="Interactable" to="." method="_on_Interactable_emit_looking_at"]
[connection signal="emit_prompt" from="Interactable" to="." method="_on_Interactable_emit_prompt"]
[connection signal="interaction" from="Interactable" to="." method="_on_Interactable_interaction"]
[connection signal="timeout" from="GasConsumptionTick" to="." method="_on_GasConsumptionTick_timeout"]
